[package]
name = "femto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["kumattau <kumattau@gmail.com>"]
description = "femto: minimal editor in terminal"
license = "MIT"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.25.0"
euclid = "0.22.7"
unicode-segmentation = "1.10.0"
unicode-width = "0.1.10"
